# model-explorer

./: .gitignore  LICENSE  README.md  format.sh  server.py
.githooks/: pre-push
.github/workflows/: auto-assignment.js  auto-assignment.yml.disabled  build-all-adapters.yml  build-single-adapter.yml  build-ui.yml  build_all_adapters.yml  codeql.yml  (+13 more)
ci/: bash_helpers.sh  code_style_check.sh  pigweed.patch  pigweed_download.sh  playwright_test.py
converter/: .bazelrc  .gitignore  BUILD  README.md  WORKSPACE  direct_flatbuffer_to_json_graph_convert.cc  direct_flatbuffer_to_json_graph_convert.h  direct_saved_model_to_json_graph_convert.cc  direct_saved_model_to_json_graph_convert.h  graphnode_builder.cc  graphnode_builder.h  model_json_graph_convert.cc  model_json_graph_convert.h  models_to_json_main.cc  status_macros.h  translate_helpers.cc  translate_helpers.h  translations.h  visualize_config.h
example_colabs/: custom_data_overlay_demo.ipynb  delegation_state_overlay_demo.ipynb  model_explorer_demo.ipynb  quick_start.ipynb
src/server/package/: README.md  pyproject.toml
src/server/package/src/: model_explorer.py
src/server/package/src/model_explorer/: __init__.py  __main__.py  adapter.py  adapter_runner.py  apis.py  builtin_graphdef_adapter.py  builtin_mlir_adapter.py  builtin_pytorch_exportedprogram_adapter.py  builtin_tf_direct_adapter.py  builtin_tf_mlir_adapter.py  builtin_tflite_flatbuffer_adapter.py  builtin_tflite_mlir_adapter.py  cmdline.py  config.py  config_editor.py  consts.py  extension_base.py  extension_class_processor.py  extension_manager.py  extension_matadata.py  file_change_handler.py  graph_builder.py  ndp_runner.py  node_data_builder.py  node_data_provider.py  pytorch_exported_program_adater_impl.py  registered_extension.py  server.py  server_directive_dispatcher.py  server_director.py  singleton.py  types.py  utils.py
src/server/package/src/model_explorer/web_app/: index.html  main-2KZBX63L.js  main-35H6CNYS.js  main-3NOSIZO3.js  main-4ADVL25W.js  main-4NNVF4SL.js  main-5R2QLBOR.js  main-635OBMHI.js  main-6H6I2ES4.js  main-6QSQ2FH7.js  main-6SGNRPQT.js  main-ADZIVBL4.js  main-ASLGTXVK.js  main-AVCPTQPV.js  main-BG4WAIEB.js  main-C5SFKCYJ.js  main-CESZCBML.js  main-DJWUFQ73.js  main-DYLUTZ7X.js  main-GZFJLWV7.js  main-HQELKSO7.js  main-I6ZOLDEZ.js  main-ILZX5XMI.js  main-ITZ5YKX3.js  main-K2YFS2QN.js  main-KFUVYSR2.js  main-KZEBCV2Z.js  main-MR2RVFDN.js  main-MUERIMKJ.js  main-MXYLYF2Q.js  main-N4F3UYDZ.js  main-NMDDWSIH.js  main-NUWWGB4K.js  main-OM2WE73S.js  main-P42BILWZ.js  main-R727DUB4.js  main-RD4WJULW.js  main-RJNGEZX2.js  main-RWE47VPT.js  main-SN4V6NYN.js  (+45 more)
src/server/package/src/model_explorer/web_app/model_explorer/: 3rdpartylicenses.txt
src/server/package/src/model_explorer/web_app/model_explorer/browser/: index.html  main-DPU3A3JD.js  styles-A5CA6XFW.css  worker-TG7CYHSU.js
src/server/package/src/model_explorer/web_app/model_explorer/browser/static_files/: GoogleSansTextBold.json
src/server/package/src/model_explorer/web_app/static_files/: FontMedium.json  FontRegular.json  app_bundle.js  icons_2024021202.json  icons_20240521.json  index.html  styles.css  worker_bin.js  worker_deps.js
(+403 files in other folders)
